--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Message</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel='stylesheet'
+        href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
+
     <link rel="stylesheet" href="./style.css">
 </head>
 
