few changes done

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <div class="letter">
                     <div class="text">
                         <strong>Hi Dear,</strong>
-                        <p>
+                        <strong>
                             Welcome to my profile.
                             How are you doing?
 
-                        </p>
+                        </strong>
                         <strong>With warm regards,</strong>
                         <strong>Dilip Sarker</strong>
                     </div>
