few changes done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <strong>
                             Welcome to my profile.
                             How are you doing?
+                            Hope you are doing well.
                         </strong>
                         <br>
                         <strong>With warm regards,</strong>
